@@ -1,5 +1,12 @@
 2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* Mono.TextEditor.Vi/ViMode.cs:
+	* Mono.TextEditor.Vi/ViActions.cs: Fix the visual mode
+	  selection when pivoting around the anchor char and anchor
+	  line.
+
+2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* Mono.TextEditor.Vi/ViActions.cs: Fix line end text object.
 
 2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>
